[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voltiq"
version = "1.0.0"
description = "EV Battery Intelligence Platform: CAN telemetry ingestion, anomaly detection, SOH estimation and RUL prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aravind Balaji", email = "aravindo2011@gmail.com" }]
keywords = ["ev", "battery", "bms", "can-bus", "telemetry", "anomaly-detection", "soh", "rul"]
dependencies = [
    "cantools>=39.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "numpy>=2.0",
    "pydantic>=2.6",
    "scikit-learn>=1.4",
]

[project.urls]
Homepage = "https://aravindbalaji.com"
Repository = "https://github.com/AravindB98/voltiq"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
voltiq = "voltiq.cli:main"

[tool.setuptools.packages.find]
include = ["voltiq*"]

[tool.setuptools.package-data]
voltiq = ["data/*.dbc", "dashboard/*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
